@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.21
 
+  *) mpm_event, mpm_worker: Fix computation of MinSpareThreads' lower bound
+     according the number of listeners buckets.  [Yann Ylavic]
+
   *) Add ap_cstr_casecmp[n]() - placeholder of apr_cstr_casecmp[n] functions
      for case-insensitive C/POSIX-locale token comparison.
      [Jim Jagielski, William Rowe, Yann Ylavic, Branko Čibej]
